# Noor

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.org
sandbox/: .dir-locals.el  CMakeLists.txt  imgui.ini
sandbox/assets/models/brass_goblets/: brass_goblets_2k.gltf
sandbox/assets/models/chess_set/: chess_set_2k.gltf
sandbox/assets/models/chest/: treasure_chest_2k.gltf
sandbox/assets/models/round_wooden_table/: round_wooden_table.gltf
sandbox/assets/shaders/: dfg_fs.glsl  equi_to_cube_fs.glsl  equi_to_cube_vs.glsl  irrad_conv_fs.glsl  pbr_fs.glsl  pbr_vs.glsl  rad_prefilter_fs.glsl  rad_prefilter_vs.glsl  skybox_fs.glsl  skybox_vs.glsl  terrain_fs.glsl  terrain_vs.glsl  test_fs.glsl  test_vs.glsl  tonemapping_fs.glsl  tonemapping_vs.glsl
sandbox/src/: camera_controller.cpp  camera_controller.h  main.cpp
scripts/: build-debug  build-release  debug-sandbox  image_8bit  image_remove_alpha  run-ccmake  run-sandbox-debug  run-sandbox-release  valgrind-sandbox
src/: #graphics_api.cpp#  Noor.h  buffers.h  camera.cpp  camera.h  core.cpp  core.h  datatypes.h  defs.cpp  defs.h  framebuffer.h  graphics_api.h  init.cpp  init.h  input_defs.h  lights.h  log.cpp  log.h  model.cpp  model.h  opengl_api.cpp  opengl_buffers.cpp  opengl_framebuffer.cpp  opengl_shader.cpp  opengl_texture.cpp  renderer.h  renderer_data.cpp  renderer_data.h  shader.h  skybox.cpp  skybox.h  texture.h  util.cpp  util.h  window.cpp  window.h
